samples/_failures_safe/1761001867_fe23a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20b7cd94.c: In function ‘main’:
./samples/SAFE/__tmp_20b7cd94.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
